libycp/testsuite/tests/errors/BadCode.ycp
{
  if (true);  // <== ";" is wrong here
  {
    return true;
  }
  return false;
}
